--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -16,33 +16,29 @@ knitr::opts_chunk$set(
 
 ## Introduction
 
-This vignette provides a brief introduction to the `quallmer` package, which is designed to facilitate the use of large language models (LLMs) for qualitative research tasks. The package relies on the `ellmer` package for LLM interactions, providing a seamless interface for users to work with different LLM providers. For more information on the `ellmer` package and supported LLM interactions, please refer to its documentation [here](https://ellmer.tidyverse.org/index.html).
+Our tutorials provide a brief introduction to the `quallmer` package, which is designed to facilitate the use of large language models (LLMs) for qualitative research tasks. The package relies on the `ellmer` package for LLM interactions, providing a seamless interface for users to work with different LLM providers. For more information on the `ellmer` package and supported LLM interactions, please refer to its documentation [here](https://ellmer.tidyverse.org/index.html).
 
 ## Basic usage
 
-To get started with `quallmer`, you first need to install the package from GitHub. Then, you can load the package and begin using its functions. 
+To get started with `quallmer`, you first need to install the package from GitHub. 
 
+```{r, eval = FALSE}
+# install.packages("pak")
+pak::pak("SeraphineM/quallmer")
+```
+
+Then, you can load the package and begin using its functions. 
 ```{r setup}
 library(quallmer)
 ```
 
-## Analysing texts
+## Overview of tutorials
 
-The `quanteda.llm` package provides functions to analyse large amounts of texts using LLMs. This is similar to manual annotations, but it automates the process using LLMs. The package includes functions for summarization, salience rating, scaling, and other text analysis tasks.
+Using `annotate()`, users can generate structured, interpretable outputs powered by large language models (LLMs). The package includes a library of [predefined tasks for common qualitative coding needs](https://seraphinem.github.io/quallmer/articles/pkgdown/examples.html), such as sentiment analysis, thematic coding, and stance detection. It also allows users to create their own custom annotation tasks tailored to their specific research questions and data types using `define_task()`. Our tutorials will guide you through the following topics:
 
-## Structuring LLM responses
+1. [**Signing up for an OpenAI API key**](file:///Users/smaerz/Desktop/quallmer/docs/articles/pkgdown/tutorials/openai.html): This tutorial will guide you through the process of obtaining an API key from OpenAI, which is necessary for using OpenAI's LLMs with the `quallmer` package.
 
-The package allows you to structure the responses from LLMs in a way that is useful for common qualitative research tasks such as text analysis, image interpretation, and much more. This means you can easily integrate LLM-generated interpretations into your research workflows. For example, you can use the `annotate()` function to ask an LLM to summarize a large number of documents and receive structured summaries that can be easily analysed further.
-
-If you need more flexibility in how the LLM generates its output, you can use the `define_task()` function to define custom prompts and response structures. With `define_task()` and the help of the `type_object()` argument from the `ellmer` package, you can define how the LLM should format its output, such as specifying the fields to include in the response or the format of the response itself. This flexibility enables you to tailor the LLMs' output to your analysis requirements, making it easier to integrate LLM-generated data into your specific workflows.
-
-## Example uses
-
-This vignette provides a brief overview of how to use the `quallmer` package for analysing different material with LLMs by briefly describing the main functions and their purposes. 
-
-### Sentiment analysis of text-based data
-
-More to come...
+2. [**Working with an open-source Ollama model**](file:///Users/smaerz/Desktop/quallmer/docs/articles/pkgdown/tutorials/ollama.html): This tutorial will demonstrate how to use the `quallmer` package with an open-source Ollama model for qualitative coding tasks.
 
 ## Conclusion
 
