--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 The `quallmer` package is an **easy-to-use tool for qualitative researchers to quickly apply AI-assisted annotation to texts, images, pdfs, tabular data and other structured data.** 
 
-Using `annotate()`, users can generate structured, interpretable outputs powered by large language models (LLMs). The package includes a library of [predefined tasks for common qualitative coding needs](https://seraphinem.github.io/quallmer/articles/pkgdown/examples.html), such as sentiment analysis, thematic coding, and stance detection. It also allows users to create their own custom annotation tasks tailored to their specific research questions and data types using `define_task()`. To ensure quality and reliability of AI-generated annotations, `quallmer` offers tools for comparing LLM outputs with human-coded data and assessing inter-coder reliability. With `agreement()`, users can launch an interactive app to manually code data, review AI annotations, and evaluate intercoder reliability between coders and agreement with LLM-generated scores.
+Using `annotate()`, users can generate structured, interpretable outputs powered by large language models (LLMs). The package includes a library of [predefined tasks for common qualitative coding needs](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html), such as sentiment analysis, thematic coding, and stance detection. It also allows users to create their own custom annotation tasks tailored to their specific research questions and data types using `define_task()`. To ensure quality and reliability of AI-generated annotations, `quallmer` offers tools for comparing LLM outputs with human-coded data and assessing inter-coder reliability. With `agreement()`, users can launch an interactive app to manually code data, review AI annotations, and evaluate intercoder reliability between coders and agreement with LLM-generated scores.
 
 **The `quallmer` package makes AI-assisted qualitative coding accessible without requiring deep expertise in R, programming or machine learning.**
 
@@ -35,7 +35,7 @@ The package provides the following core functions:
 
 ### `annotate()`
 - A generic function that works with any LLM supported by [ellmer](https://ellmer.tidyverse.org/index.html).  
-- Generates structured responses based on [predefined](https://seraphinem.github.io/quallmer/articles/pkgdown/examples.html) or user-defined tasks.  
+- Generates structured responses based on [predefined](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.htmll) or user-defined tasks.  
 
 ### `define_task()`
 - Create custom annotation tasks with structured outputs.  
@@ -67,7 +67,7 @@ pak::pak("SeraphineM/quallmer")
 
 ## Example use and tutorials
 
-To learn more about how to use the package, please refer to our [step-by-step tutorials](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials.html) and 
-the illustrations on [how to use the predefined tasks](https://seraphinem.github.io/quallmer/articles/pkgdown/examples.html).
+To learn more about how to use the package, please refer to our [step-by-step tutorials](https://seraphinem.github.io/quallmer/articles/getting-started.html) and 
+the illustrations on [how to use the predefined tasks](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html).
 
 
