fixing more hyperlinks

--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -14,7 +14,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Introduction
 
 Our tutorials provide a brief introduction to the `quallmer` package, which is designed to facilitate the use of large language models (LLMs) for qualitative research tasks. The package relies on the `ellmer` package for LLM interactions, providing a seamless interface for users to work with different LLM providers. For more information on the `ellmer` package and supported LLM interactions, please refer to its documentation [here](https://ellmer.tidyverse.org/index.html).
 
@@ -34,12 +33,14 @@ library(quallmer)
 
 ## Overview of tutorials
 
+Before using large language models, most users will need to sign up for an API key from an LLM provider, such as openai, or download an open-source model like those from Ollama. The `quallmer` package supports multiple LLM providers through the `ellmer` package, allowing users to choose the one that best fits their needs.
+
 Using `annotate()`, users can generate structured, interpretable outputs powered by large language models (LLMs). The package includes a library of [predefined tasks for common qualitative coding needs](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html), such as sentiment analysis, thematic coding, and stance detection. It also allows users to create their own custom annotation tasks tailored to their specific research questions and data types using `define_task()`. Our tutorials will guide you through the following topics:
 
-1. [**Signing up for an OpenAI API key**](file:///Users/smaerz/Desktop/quallmer/docs/articles/pkgdown/tutorials/openai.html): This tutorial will guide you through the process of obtaining an API key from OpenAI, which is necessary for using OpenAI's LLMs with the `quallmer` package.
+1. [**Signing up for an OpenAI API key**](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/openai.html): This tutorial will guide you through the process of obtaining an API key from OpenAI, which is necessary for using OpenAI's LLMs with the `quallmer` package.
 
-2. [**Working with an open-source Ollama model**](file:///Users/smaerz/Desktop/quallmer/docs/articles/pkgdown/tutorials/ollama.html): This tutorial will demonstrate how to use the `quallmer` package with an open-source Ollama model for qualitative coding tasks.
+2. [**Working with an open-source Ollama model**](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/ollama.html): This tutorial will demonstrate how to use the `quallmer` package with an open-source Ollama model for qualitative coding tasks.
 
-## Conclusion
+3. [**Creating custom tasks**](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html): This tutorial will walk you through the process of defining your own custom annotation tasks using the `define_task()` function, allowing you to tailor the LLM's output to your specific research needs.
 
-The `quallmer` package provides a powerful and flexible framework for integrating large language models into research workflows. By leveraging LLMs, users can automate various text, image, video, etc., processing tasks, such as summarization, classification, and scoring. The package's ability to structure LLM responses and customize output formats makes it a valuable tool for researchers and analysts looking to harness the capabilities of LLMs in their work. For more detailed examples and use cases, please refer to the other vignettes and documentation provided with the package.
+More tutorials will be added soon. 
