--- a/vignettes/pkgdown/tutorials/customtask.Rmd
+++ b/vignettes/pkgdown/tutorials/customtask.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial: Defining custom tasks"
+title: "Defining custom tasks"
 output: html_document
 ---
 
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-With the `quallmer` package, you can define custom annotation tasks tailored to your specific research questions and data types using the `define_task()` function. This allows you to create structured prompts and response formats that suit your qualitative coding needs.
+In this tutorial, we will explore how to create custom annotation tasks using the `quallmer` package. Custom tasks allow you to tailor the LLM's output to your specific research questions and data types using the `define_task()` function, providing greater flexibility and control over the annotation process.
 
 In the following example, we will demonstrate how to define a custom task for scoring documents 
 based on their alignment with political left ideologies. For this, we formulate a prompt that asks the LLM to score documents on a scale of political left alignment. We then define the expected response structure using the `define_task()` function. Finally, we will use the `annotate()` function to apply this custom task to a sample corpus of inaugural speeches from US presidents.
@@ -15,19 +15,24 @@ based on their alignment with political left ideologies. For this, we formulate 
 ### Loading packages and data
 
 ```{r getting-started}
-# We will use the quanteda package for loading a sample corpus of innaugural speeches
+# We will use the quanteda package 
+# for loading a sample corpus of innaugural speeches
 # If you have not yet installed the quanteda package, you can do so by:
 # install.packages("quanteda")
 library(quanteda)
 library(quallmer)
 
-# For educational purposes, we will use a subset of the inaugural speeches corpus
+# For educational purposes, 
+# we will use a subset of the inaugural speeches corpus
 # The three most recent speeches in the corpus
 data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 
 ```
 
 ### Defining a custom prompt
+
+Defining prompts is a crucial step in creating custom tasks. The prompt guides the LLM on how to interpret the input data and what kind of output to generate. In this example, we will create a prompt that instructs the LLM to score documents based on their alignment with political left ideologies. Prompts can be much longer and more complex depending on the task at hand. Prompts should be clear and specific to ensure that the LLM understands the task requirements.
+
 ```{r define-prompt}
 
 prompt <- "Score the following document on a scale of how much it aligns
@@ -42,12 +47,19 @@ SCORING METRIC:
 
 ```
 
-### Defining the structure of the response
+### Defining the structure of the response with define_task()
+
+The `define_task()` function allows us to specify the expected structure of the LLM's response. It has the following important arguments which users need to specify:
+
+- `name`: A descriptive name for the task.
+- `system_prompt`: The prompt that guides the LLM on how to perform the task.
+- `type_object`: Defines the expected structure of the response using `ellmer::type_object()`.
+
+For more information on defining `type_objects`, please refer to the [ellmer documentation](https://ellmer.tidyverse.org/articles/structured-data.html).
+For more information [going beyond type_object, see the documentation for ellmer::type_boolean()](https://ellmer.tidyverse.org/reference/type_boolean.html)
+
 ```{r define-structure}
-# Important elements of define_task() are the name, system_prompt, type_object, and input_type arguments.
-# The type_object argument specifies the expected structure of the response from the LLM.
-# For more options, see the documentation for ellmer::type_object()
-# https://ellmer.tidyverse.org/reference/type_boolean.html
+# Define the custom task using define_task()
 ideology_scores <- define_task(
   name = "Score Political Left Alignment",
   system_prompt = prompt,
@@ -60,8 +72,11 @@ ideology_scores <- define_task(
 ```
 
 ### Applying the custom task to the corpus
+
+This step is similar to applying predefined tasks using the `annotate()` function. Here, we will use the `annotate()` function to apply our custom task to the sample corpus of inaugural speeches. We will specify the LLM to use (in this case, openai's gpt-4o model) and any additional API arguments as needed. For example, we set the temperature to 0 for more deterministic outputs, improving consistency in scoring across multiple runs and therefore increasing reliability.
+
 ```{r apply-task}
-# This is straightforward using the annotate() function and our custom task
+# Apply the custom task to the inaugural speeches corpus
 result <- annotate(data_corpus_inaugural, task = ideology_scores,
                    chat_fn = chat_openai, model = "gpt-4o",
                    api_args = list(temperature = 0, seed = 42))
